--- a/assessment.html
+++ b/assessment.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assessment.css">
-    <title>${KIHIRO9}が作ったあなたのいいところ診断</title>
+    <title>KIHIRO9が作ったあなたのいいところ診断</title>
 </head>
 <body>
     <h1>あなたのいいところは?</h1>
